# webots-shadow

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
aux/: sandra.wbt
controllers/crowd_controller/: CrowdAgent.cpp  CrowdAgent.h  CrowdManager.cpp  Makefile  crowd_controller  crowd_controller.cpp
controllers/crowd_controller_bump/: Makefile  crowd_controller_bump.cpp
controllers/crowd_controller_four_rooms/: CrowdManager_four_rooms.cpp  Makefile  crowd_controller_four_rooms.cpp
controllers/crowd_controller_iros/: crowd_controller_iros.cpp
controllers/crowd_controller_iros_no_walls/: crowd_controller_iros_no_walls  crowd_controller_iros_no_walls.cpp
controllers/crowd_controller_two_rooms_big/: crowd_controller_two_rooms_big  crowd_controller_two_rooms_big.cpp
controllers/human_keyboard_controlled/: human_keyboard_controlled  human_keyboard_controlled.cpp
controllers/random_navigation/: Makefile  random_navigation  random_navigation.cpp
controllers/sandra_test/: Makefile  sandra_test  sandra_test.cpp
libs/: CMakeCache.txt  CMakeLists.txt  Makefile  install_manifest.txt
libs/animation_skin/: AnimationSkin.cpp  AnimationSkin.hpp  CMakeCache.txt  CMakeLists.txt  animation_skin.cpp  animation_skin.hpp  bvh_util.c  bvh_util.h  install_manifest.txt
libs/bvh_util/: CMakeLists.txt  Makefile  bvh_util.c  bvh_util.h  quaternion.c  quaternion.h  vector3.h
libs/crowd_agent/: CMakeLists.txt  CrowdAgent.cpp  CrowdAgent.h
libs/random_navegation/: RandomNavegation.cpp  RandomNavegation.h
libs/random_navigation/: RandomNavigation.cpp  RandomNavigation.h
motions/: Walk.bvh
protos/: BodyMesh.proto  Bump.proto  Door.proto  NavegableBox.proto  Shadow.proto
protos/enviroment/meshes/: banco.dae  floor.dae  pecera.dae  (+4 more)
protos/meshes/: Basin.dae  BathTub.dae  BedSmall.dae  DifferentialWheel.dae  LampDome.dae  LampStanding.dae  Mirror.dae  PlantPot.dae  Rack.dae  ShelvesBig.dae  SofaArmChair.dae  SofaDouble.dae  Store.dae  TableBig.dae  TableMedium.dae  TableNarrow.dae  WashBasin.dae  WashingMachine.dae  shadow.dae  shadow.stl  shadow2.dae
worlds/: .Shadow.wbproj  FourRooms.wbt  FourRoomsNoHallways.wbt  FridgeConundrumBasic.wbt  IROS.wbt  IROS_Complex.wbt  IROS_Simple.wbt  IROS_Simple_home.wbt  IROS_Simple_no_walls.wbt  Shadow.wbt  Shadow_v2.wbt  SimpleWorld.wbt  SimpleWorldTable.wbt  SimpleWorld_BRC1.wbt  SimpleWorld_BRC2.wbt  SimpleWorld_BRC3.wbt  SimpleWorld_Bump.wbt  TwoRooms.wbt  TwoRoomsBig.wbt  TwoRoomsBigNoMovement.wbt  TwoRoomsRealistic.wbt  TwoRoomsReallyBig.wbt  TwoRoomsReallyBigNoMovement.wbt  TwoRoomsSimple.wbt  TwoRoomsSimpleNumbers.wbt  TwoRoomsTwoDoors.wbt  TwoRoomsTwoDoorsNumbers.wbt  complete_apartment.wbt  complete_apartment_beta.wbt  hallway_and_beta.wbt  hallway_and_beta_empty.wbt
worlds/FourRoom_meshes/: FourRooms_Floor.mtl  FourRooms_Walls.mtl  floor.dae  floor_1.dae  floor_2.dae  floor_3.dae  floors_no_hallways.dae  rooms_no_hallways.dae  walls.dae  walls_1.dae  walls_2.dae  walls_3.dae  walls_no_hallways.dae
(+28 files in other folders)
